# little-benchmarks

./: .gitignore  pyproject.toml
src/little_benchmarks/: __init__.py  nois.py  result_reader.py  test.py  test_nxs.py
