[project]
name = "little-benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "McDougall", email = "Duncan.McDougall@rfi.ac.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "h5py>=3.16.0",
    "hdf5plugin>=6.0.0",
    "icecream>=2.2.0",
    "matplotlib>=3.10.9",
    "ms-nexus-tools",
    "numpy>=2.4.4",
    "polars>=1.40.1",
    "tqdm>=4.67.3",
    "zarr>=3.2.1",
]

[project.scripts]
main = "little_benchmarks:main"
read = "little_benchmarks:read"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[tool.uv.sources]
ms-nexus-tools = { path = "../ms-nexus-tools", editable = true }
